# ai-transformation-delivery-systems

./: .gitignore  AGENTS.md  README.md
.github/workflows/: classifier-metrics-sweep.yml  metricsai-ci.yml  move-tag.yml  test-classifier.yml
metricsai/: .gitignore  CLAUDE.md  LICENSE  QUICKSTART.md  README.md  mkdocs.yml  pyproject.toml
metricsai/docs/: index.md  modules.md  usage.md
metricsai/src/: t
metricsai/src/metricsai/: __init__.py  __main__.py  cli.py  client.py  config.py  context.py  keychain.py  logging.py  models.py
metricsai/src/metricsai/modules/: __init__.py  base.py  build_pr.py  security.py  testing.py
metricsai/src/metricsai/sources/: __init__.py  aws.py  github.py
metricsai/tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_github_source.py  test_keychain.py  test_models.py  test_security.py  test_testing.py
scripts/: README.md  fetch-skills.sh
security/metrics/: README.md  pr_review_comments.sh  retrieve_sechub_misconfigurations.sh
security/review/: .gitignore  .pre-commit-config.yaml  INSTALL.txt  README.md
security/review/.github/: copilot-instructions.md
security/review/docs/: LOCAL_SECURITY_REVIEW.md  PR_REVIEW_SETUP.md
security/review/scripts/: fetch-skills.sh  sync-skills.sh
testing/classifier/: .gitignore  AGENT_INSTALL.md  INSTALL.txt  README.md  caller-workflow.yml
testing/classifier/.github/: copilot-instructions.md
testing/classifier/ci/: otel-collector-codex.yaml
testing/classifier/docs/: BEDROCK.md  LOCAL_TEST_CLASSIFIER.md  (+3 more)
testing/metrics/: README.md  classifier_thumbs.sh  test_classifier_comments.sh
(+24 files in other folders)
