[project]
name = "metricsai"
version = "0.1.0"
description = "Pluggable collector for AI-in-SDLC metrics that reports a timestamped row to a Google Apps Script webhook."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Brian Hodges", email = "brianhodges@navapbc.com" }]
keywords = ["metrics", "sdlc", "github", "security", "ai"]
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "keyring>=25",
    "httpx>=0.27",
    "PyGithub>=2.3",
    "boto3>=1.34",
]

[project.scripts]
metricsai = "metricsai.cli:main"

[project.urls]
Repository = "https://github.com/navapbc/ai-transformation-delivery-systems"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "black>=24",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metricsai"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
# A pragmatic, opinionated default: correctness, pyflakes, imports, bugbear,
# comprehensions, simplification, and upgrade hints.
select = ["E", "F", "I", "B", "C4", "SIM", "UP", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["metricsai"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
